# scraper

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENT.md  AGENTS.md  CHANGELOG.md  Dockerfile  GOAL.md  LICENSE  Makefile  README.md  SKILL.md  Taskfile.yml  cleanup-uppity.ts  compose.yml  debug_convert.js  docker-compose.yml  get_posts.sh  get_urls.sh  html2md.js  list.list  package-lock.json  package.json  test_dicetek.md  tsconfig.json  update_fixtures.ts  verify_location_filter.js
.agents/: Makefile  agents.md
.agents/brain/: FixBronzeHtml.ts  GptersQueueTransform.ts
.agents/rules/: BrainDumpRule.md  ContextMemoryDumpRule.md  DBDiagnosticRule.md  DevelopSitesRules.md  FailureHandlingRule.md  PlanningRule.md  SitesClipperRules.md  TranscriptRule.md  db_diagnostic.md  docker_environment.md  documentation_lifecycle.md  engineering_architecture.md  failure_handling.md  git_flow.md  planning.md  tech_stack.md
.agents/scripts/: agents.mk  commit-changes.sh  commit-changes.ts  compress_rules.ts  dump_brain.ts  dump_context.ts  dump_sysinfo.ts  dump_transcript.ts  gitea.ts  lint_rules.ts  oc-profile.sh  openkb.ts  prune_session.ts  push-changes.sh  push-changes.ts  review-changes.sh  review-changes.ts  sync-pms.ts  sync-wiki.sh  sync-wiki.ts  update_wiki.ts  usage.ts
.agents/skills/: DatabaseSkills.md  DevelopSitesSkills.md  HtmlDebuggingSkills.md  audit_code.md  code_review.md  database_skills.md  develop_sites_skills.md  generate_code.md  html_debugging_skills.md  translate_pipeline.md  write_specs.md
.agents/workflows/: start_task.md  startcycle.md
.firecrawl/: ddds_archive.json
.firecrawl/maily/: article.html  article.md  josh-links.json  josh.md  list.html
apps/: Taskfile.yml
apps/agents/: agent_adapter.ts  rules.ts  sessions.ts  tsconfig.json
apps/config/: sites.json
apps/crawler/: AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  Taskfile.yml  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
apps/ebook/: AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  Taskfile.yml  books.json  compose.yml  process.py  pyproject.toml
apps/ebook/docker/: Dockerfile  compose.yml
apps/ebook/src/: __init__.py  analyze_pdfs.py  analyzer.py  commands.py  constants.py  html_parser.py  html_to_markdown.py  main.py  markdown_parser.py  pdf_analyzer.py  pdf_to_html.py  pdf_to_markdown.py  pdf_translator.py  process.py  split_chapter.py  translate.py  translate_batch.py  translator.py
apps/ebook/tests/: test_analyzer.py  test_column_detector.py  test_splitter_utils.py  test_text_cleaner.py
apps/exporter/: Dockerfile  (+3 more)
apps/openkb/: Makefile  README.md  Taskfile.yml  openkb.py  pyproject.toml  update_wiki.py
apps/openkb/docker/: Dockerfile  compose.yml  config.yaml  entrypoint.sh  global.yaml
apps/openkb/src/: openkb.py  update_wiki.py
config/: config.json  country.json  country_codes.json
docker/: browser.mk  docker.mk  environments.mk
docs/: browser-testing-setup.md  translate_prompts_en-ko.md  troubleshooting.md
infra/: Taskfile.yml
notebooks/: explore_jobs.ipynb  job_description_skills_extraction.ipynb  kaggle.md  linkedin_job_analysis.ipynb
scratch/: test.txt
scripts/: agents.mk  browser.mk  environments.mk  get_posts.sh  get_urls.sh  global.mk  html2md.sh  mongo.mk  pipeline.mk  tests.mk  tools.mk
src/: Crawler.ts  InitialBackfill.ts  RedisWorker.ts  ScraperWorker.ts  TargetLoader.ts  TransformerWorker.ts  company_converter.ts  company_pipeline.ts  crawler.ts  filter_urls.js  get_filename.js  get_filename.ts  get_html.js  get_list.js  get_posts.js  html2md.js  inspect_code_json.ts  login.js  markdown_converter.ts  migrate_locations.ts  pipeline.ts  prettify.js  push_urls.ts  reconvert_all.ts  redis_sync.ts  redis_worker.ts  test_regex_json.ts  url_generator.js  url_manager.ts  utils.ts
tests/: UrlManager.test.ts  mcp_client.ts  test.html  test.md  url_manager.test.ts
tools/: Taskfile.yml
(+1070 files in other folders)
