[project]
name = "ebook"
version = "0.1.0"
description = "Ebook PDF processing pipeline: split, convert, translate, and analyze PDFs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf>=1.27.2.3",
    "poethepoet>=0.32.2",
    "markdownify>=0.14.1",
    "beautifulsoup4>=4.13.3",
    "lxml>=5.3.1",
    "google-generativeai>=0.8.4",
    "openai>=1.70.0",
    "python-dotenv>=1.1.0",
    "pytest>=8.3.5",
    "ebooklib>=0.18",
    "mypy>=1.14.1",
    "ruff>=0.9.1",
]

[tool.poe.tasks]
summary = "python -m src.main --summary"
analyze = "python -m src.main --analyze"
split = "python -m src.main --split"
to-html = "python -m src.main --to-html"
to-md = "python -m src.main --to-md"
test = "pytest tests/ -v"
lint = "ruff check src/ tests/"
format = "ruff format src/ tests/"
format-check = "ruff format --check src/ tests/"
type-check = "mypy src/ tests/"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
